--- a/src/app/components/medicine/listarmed/listarmed.component.html
+++ b/src/app/components/medicine/listarmed/listarmed.component.html
@@ -16,17 +16,23 @@
                 <th mat-header-cell *matHeaderCellDef>Nombre</th>
                 <td mat-cell *matCellDef="let element">{{ element.nameMedicine }}</td>
             </ng-container>
+
+            <ng-container  matColumnDef="c4">
+                <th mat-header-cell *matHeaderCellDef> tratamiento . </th>
+                <td mat-cell *matCellDef="let element"> {{element.treatment.descriptionTreatment}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="accion01">
                 <th mat-header-cell *matHeaderCellDef>Eliminar</th>
                 <td mat-cell *matCellDef="let element" (click)="delete(element.idMedicine)">
                     <mat-icon style="color:#f4310a;">delete</mat-icon>
-                </td> 
+                </td>
             </ng-container>
             <ng-container matColumnDef="accion02">
                 <th mat-header-cell *matHeaderCellDef>Actualizar</th>
                 <td mat-cell *matCellDef="let element" [routerLink]="['edicionesmed',element.idMedicine]">
                     <mat-icon style="color:#f4310a;">edit</mat-icon>
-                </td> 
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
