--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <mat-toolbar class="custom-toolbar">
-
   <img src="images/logoicon.png" alt="logoicon" class="logoIcon">
   <span class="website-name">MedLearn</span>
   <span class="espacio"></span>
@@ -19,11 +18,6 @@
     <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
       Reportes
     </button>
-    <button mat-button [matMenuTriggerFor]="menuTratamientos" style="color: white">
-      Tratamientos
-    <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
-      <mat-icon>book</mat-icon>Reportes
-    </button>
   </div>
 </mat-toolbar>
 
@@ -41,27 +35,21 @@
   <button mat-menu-item routerLink="/Usuarioss">Listar</button>
   <button mat-menu-item routerLink="/Usuarioss/nuevous">Registrar</button>
 </mat-menu>
+
 <mat-menu #menuReportes="matMenu">
   <button mat-menu-item routerLink="/reportes">Listar</button>
   <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
+  <button mat-menu-item routerLink="/reportes/reportetratamientosporenfermedad">Tratamientos por enfermedad</button>
+</mat-menu>
 
 <mat-menu #menuTratamientos="matMenu">
   <button mat-menu-item routerLink="/Tratamientoss">Listar</button>
   <button mat-menu-item routerLink="/Tratamientoss/nuevotr">Registrar</button>
 </mat-menu>
+
 <mat-menu #menuHospitales="matMenu">
   <button mat-menu-item routerLink="/Hospitales">Listar</button>
   <button mat-menu-item routerLink="/Hospitales/nuevohp">Registrar</button>
-</mat-menu>
-<mat-menu #menuTratamientos="matMenu">
-  <button mat-menu-item routerLink="/Tratamientoss">Listar</button>
-  <button mat-menu-item routerLink="/Tratamientoss/nuevotr">Registrar</button>
-
-<mat-menu #menuReportes="matMenu">
-  <button mat-menu-item routerLink="/reportes">
-    <mat-icon> pie_chart</mat-icon>
-    Cantidad
-  </button>
 </mat-menu>
 
 <router-outlet></router-outlet>
