--- a/src/app/components/treatments/listartr/listartr.component.html
+++ b/src/app/components/treatments/listartr/listartr.component.html
@@ -73,7 +73,7 @@
       <p><strong>Día de inicio:</strong> {{ treatment.startDayTreatment }}</p>
       <p><strong>Día de término:</strong> {{ treatment.finishDayTreatment }}</p>
       <p><strong>Enfermedad:</strong> {{ treatment.illness.nameIllness }}</p>
-      <!--<p><strong>Usuario:</strong> {{ treatment.user.username }}</p>-->
+      <p><strong>Paciente:</strong> <!--{{treatment.user.fullnameUser}}</p>-->
     </div>
 
     <!-- Botones de acción adicionales (comenzar/finalizar y ver ingredientes) -->
