--- a/src/app/components/quantity/listarquan/listarquan.component.html
+++ b/src/app/components/quantity/listarquan/listarquan.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div style="text-align: center;margin: 5%;"> <h1>Lista de quantity</h1> </div>
-     
+
     <div>
       <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
-     
+
         <ng-container matColumnDef="c1">
           <th mat-header-cell *matHeaderCellDef> ID. </th>
           <td mat-cell *matCellDef="let element"> {{element.idQuantity}} </td>
@@ -19,24 +19,33 @@
           <td mat-cell *matCellDef="let element"> {{element.medicine.nameMedicine}} </td>
         </ng-container>
 
+        <ng-container  matColumnDef="c4">
+          <th mat-header-cell *matHeaderCellDef> Nombre de la comida . </th>
+          <td mat-cell *matCellDef="let element"> {{element.food.nameFood}} </td>
+        </ng-container>
+
+        <ng-container  matColumnDef="c5">
+          <th mat-header-cell *matHeaderCellDef> Nombre del ejericio . </th>
+          <td mat-cell *matCellDef="let element"> {{element.exercise.nameExercise}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="editar">
           <th mat-header-cell *matHeaderCellDef>Actualizar</th>
           <td mat-cell *matCellDef="let element" [routerLink]="['editas/',element.idQuantity]">
               <mat-icon style="color:#f4310a;">edit</mat-icon>
-          </td> 
+          </td>
       </ng-container>
 
-     
-    
-  
+
+
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-      
+
     </div>
-  
+
   </div>
-     
-     
-     
-     
+
+
+
