--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,38 @@
-<mat-toolbar class="custom-toolbar">
-
+<mat-toolbar class="custom-toolbar" *ngIf="verificar()">
   <img src="images/logoicon.png" alt="logoicon" class="logoIcon">
   <span class="website-name">MedLearn</span>
   <span class="espacio"></span>
   <div>
     <button mat-button [matMenuTriggerFor]="menuEnfermedad" style="color: white">
-      Enfermedad
+      <mat-icon>healing</mat-icon> Enfermedad
     </button>
     <button mat-button [matMenuTriggerFor]="menuDietas" style="color: white">
-      Dietas
+      <mat-icon>restaurant</mat-icon> Dietas
     </button>
     <button mat-button [matMenuTriggerFor]="menuUsuarios" style="color: white">
-      Usuarios
+      <mat-icon>people</mat-icon> Usuarios
     </button>
     <button mat-button [matMenuTriggerFor]="menuHospitales" style="color: white">
-      Hospitales
-    </button>
-    <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
-      Reportes
-    </button>
-    <button mat-button [matMenuTriggerFor]="menuTratamientos" style="color: white">
-      Tratamientos
+      <mat-icon>local_hospital</mat-icon> Hospitales
     </button>
     <button mat-button [matMenuTriggerFor]="menuExercices" style="color: white">
-      Ejercicios
+      <mat-icon>directions_run</mat-icon>Ejercicios
     </button>
     <button mat-button [matMenuTriggerFor]="menuFoods" style="color: white">
-      Alimentos
+      <mat-icon>fastfood</mat-icon>Alimentos
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuReportes" style="color: white">
+      <mat-icon>assessment</mat-icon> Reportes
+    </button>
+  </div>
+  <div class="right-menu">
+    <button mat-button [matMenuTriggerFor]="menuSalir" style="color: white">
+      <mat-icon>person</mat-icon>{{ username }}
     </button>
   </div>
 </mat-toolbar>
 
+<!-- Menús no requieren cambios adicionales -->
 <mat-menu #menuEnfermedad="matMenu">
   <button mat-menu-item routerLink="/Enfermedades">Listar</button>
   <button mat-menu-item routerLink="/Enfermedades/nuevoenf">Registrar</button>
@@ -45,27 +47,35 @@
   <button mat-menu-item routerLink="/Usuarioss">Listar</button>
   <button mat-menu-item routerLink="/Usuarioss/nuevous">Registrar</button>
 </mat-menu>
-<mat-menu #menuReportes="matMenu">
-  <button mat-menu-item routerLink="/reportes">Listar</button>
-  <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
-  <button mat-menu-item routerLink="/reportes/totalCaloriasporDieta">Reporte de Calorias</button>
-  <button mat-menu-item routerLink="/reportes/totaleEjerciciospoDieta">Reporte de Ejercicios</button>
-</mat-menu>
+
 <mat-menu #menuFoods="matMenu">
   <button mat-menu-item routerLink="/Alimentos">Listar</button>
   <button mat-menu-item routerLink="/Alimentos/nuevofd">Registrar</button>
 </mat-menu>
+
 <mat-menu #menuExercices="matMenu">
   <button mat-menu-item routerLink="/Ejercicios">Listar</button>
   <button mat-menu-item routerLink="/Ejercicios/nuevoex">Registrar</button>
 </mat-menu>
+
 <mat-menu #menuHospitales="matMenu">
   <button mat-menu-item routerLink="/Hospitales">Listar</button>
-  <button mat-menu-item routerLink="/Hospitales/nuevohp">Registrar</button>
-</mat-menu>
-<mat-menu #menuTratamientos="matMenu">
-  <button mat-menu-item routerLink="/Tratamientoss">Listar</button>
-  <button mat-menu-item routerLink="/Tratamientoss/nuevotr">Registrar</button>
 </mat-menu>
 
+<mat-menu #menuReportes="matMenu">
+  <button mat-menu-item routerLink="/reportes">Listar</button>
+  <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
+  <button mat-menu-item routerLink="/reportes/proportionusers">Proporción de Usuarios</button>
+</mat-menu>
+
+<mat-menu #menuSalir="matMenu">
+  <button mat-menu-item routerLink="/login" (click)="cerrar()">
+    <mat-icon>logout</mat-icon>
+    <span>Cerrar sesión</span>
+  </button>
+  <button mat-menu-item>
+    Rol:
+    <span>{{ role }}</span>
+  </button>
+</mat-menu>
 <router-outlet></router-outlet>
