--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,6 +73,8 @@
   <button mat-menu-item routerLink="/reportes/numberdietinityfinal">Reporte de dietas</button>
   <button mat-menu-item routerLink="/reportes/totalCaloriasporDieta">Reporte de Calorias</button>
   <button mat-menu-item routerLink="/reportes/totaleEjerciciospoDieta">Reporte de Ejercicios</button>
+  <button mat-menu-item routerLink="/reportes/promedioduraciontratamiento">Reporte de promedio tratamientos</button>
+
 </mat-menu>
 <mat-menu #menuFoods="matMenu">
   <button mat-menu-item routerLink="/Alimentos">Listar</button>
