--- a/src/app/components/medicine/listarmed/listarmed.component.html
+++ b/src/app/components/medicine/listarmed/listarmed.component.html
@@ -1,42 +1,27 @@
 <div class="container">
-    <div style="text-align: center; margin: 5%"><h1>Lista de Medicinas</h1></div>
-    <div>
-        <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
-            <ng-container matColumnDef="c1">
-                <th mat-header-cell *matHeaderCellDef>Código</th>
-                <td mat-cell *matCellDef="let element">{{ element.idMedicine }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="c2">
-                <th mat-header-cell *matHeaderCellDef>Descripción</th>
-                <td mat-cell *matCellDef="let element">{{ element.descriptionMedicine }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="c3">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let element">{{ element.nameMedicine }}</td>
-            </ng-container>
-
-            <ng-container  matColumnDef="c4">
-                <th mat-header-cell *matHeaderCellDef> tratamiento . </th>
-                <td mat-cell *matCellDef="let element"> {{element.treatment.descriptionTreatment}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="accion01">
-                <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-                <td mat-cell *matCellDef="let element" (click)="delete(element.idMedicine)">
-                    <mat-icon style="color:#f4310a;">delete</mat-icon>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="accion02">
-                <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-                <td mat-cell *matCellDef="let element" [routerLink]="['edicionesmed',element.idMedicine]">
-                    <mat-icon style="color:#f4310a;">edit</mat-icon>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-    </div>
+  <div style="text-align: center; margin: 5%">
+    <h1>Lista de Medicinas</h1>
+  </div>
+  <div class="card-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+    <mat-card *ngFor="let element of datasource.data" class="card" style="width: 300px; box-shadow: 0px 2px 5px rgba(0,0,0,0.2);">
+      <mat-card-header>
+        <button mat-raised-button style="background-color: #4CAF50; color: white; margin-right: 5px;"
+                [routerLink]="['edicionesmed', element.idMedicine]" class="edit-btn">
+          Editar
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-raised-button style="background-color: #F44336; color: white;"
+                (click)="delete(element.idMedicine)" class="delete-btn">
+          Eliminar
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-card-title>{{ element.nameMedicine }}</mat-card-title>
+        <p><strong>Código:</strong> {{ element.idMedicine }}</p>
+        <p><strong>Descripción:</strong> {{ element.descriptionMedicine }}</p>
+        <p><strong>Tratamiento:</strong> {{ element.treatment.descriptionTreatment }}</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
