--- a/src/app/components/quantity/listarquan/listarquan.component.html
+++ b/src/app/components/quantity/listarquan/listarquan.component.html
@@ -1,51 +1,16 @@
 <div class="container">
-    <div style="text-align: center;margin: 5%;"> <h1>Lista de quantity</h1> </div>
-
-    <div>
-      <table mat-table [dataSource]="datasource" class="mat-elevation-z8">
-
-        <ng-container matColumnDef="c1">
-          <th mat-header-cell *matHeaderCellDef> ID. </th>
-          <td mat-cell *matCellDef="let element"> {{element.idQuantity}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="c2">
-          <th mat-header-cell *matHeaderCellDef> Cantidad. </th>
-          <td mat-cell *matCellDef="let element"> {{element.quantityQuantity}} </td>
-        </ng-container>
-
-        <ng-container  matColumnDef="c3">
-          <th mat-header-cell *matHeaderCellDef> Nombre de la medicina . </th>
-          <td mat-cell *matCellDef="let element"> {{element.medicine.nameMedicine}} </td>
-        </ng-container>
-
-        <ng-container  matColumnDef="c4">
-          <th mat-header-cell *matHeaderCellDef> Nombre de la comida . </th>
-          <td mat-cell *matCellDef="let element"> {{element.food.nameFood}} </td>
-        </ng-container>
-
-        <ng-container  matColumnDef="c5">
-          <th mat-header-cell *matHeaderCellDef> Nombre del ejericio . </th>
-          <td mat-cell *matCellDef="let element"> {{element.exercise.nameExercise}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="editar">
-          <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-          <td mat-cell *matCellDef="let element" [routerLink]="['editas/',element.idQuantity]">
-              <mat-icon style="color:#f4310a;">edit</mat-icon>
-          </td>
-      </ng-container>
-
-
-
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-
-    </div>
-
+  <div style="text-align: center; margin: 5%;">
+    <h1>Lista de Quantity</h1>
   </div>
-
-
-
+  <div class="card-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+    <mat-card *ngFor="let element of datasource.data" class="card" style="width: 300px; box-shadow: 0px 2px 5px rgba(0,0,0,0.2);">
+      <mat-card-content>
+        <mat-card-title>ID: {{ element.idQuantity }}</mat-card-title>
+        <p><strong>Cantidad:</strong> {{ element.quantityQuantity }}</p>
+        <p><strong>Nombre de la medicina:</strong> {{ element.medicine.nameMedicine }}</p>
+        <p><strong>Nombre de la comida:</strong> {{ element.food.nameFood }}</p>
+        <p><strong>Nombre del ejercicio:</strong> {{ element.exercise.nameExercise }}</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
